src/Style.css
body {
  background-image: url("../src/Background2.jpg");
  background-repeat:no-repeat;
  background-size: 100vw;
  background-size: 90vh;
  background-position-x: 45%;
}

footer {
  height: 10vh;
  font-family: Georgia, "Times New Roman", Times, serif;
}

.bg-dark-transparent {
  background-color: rgba(0, 0, 0, 0.75);
}

.bg-dark2-transparent {
  background-color: rgba(0, 0, 0, 0.85);
}

.hide {
  display: none;
}

.round-corners {
  border-radius: 5px;
}

.navbarToggler {
  font-size: 0.5rem;
}

/* .about-list li::before {
  content: "\2022";
  color: red;
  font-weight: bold;
  width: 1em;
  display: inline-block;
} */

/* ///////////////////////////////////////////////// all classes above are currently in use!!!!! /////////////////////////////////////////////// */



/* // Extra small devices (portrait phones, less than 576px)
// No media query since this is the default (as in Bootstrap) */

/* // Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {

} 


/* // Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {

 }

/* // Large devices (desktops, 992px and up) */
@media (min-width: 992px) {

}

/* // Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

} 






/* ////////////////////////////// header ////////////////////////////// */
/* .headerContainer {
  margin-top: rem !important;
  margin-right: 11rem !important;  
}

.headerH1 {
  /* font-family:cursive !important; */
  /* margin-right: 10rem; */
/* } */

/* .headerH2 {
  /* font-family:cursive !important; */
  /* font-style: italic; */
  /* margin-top: 7rem !important; */
/* } */ 

/* .headerButtons { */
  /* margin-right: 1rem !important; */
  /* margin-top: 10rem !important; */
/* } */ 


/* ////////////////////////////// footer ////////////////////////////// */





/* ////////////////////////////// about and contact - info ////////////////////////////// */
/* .aboutAndContact {
  position: fixed;
  top:32rem;
  left:18.7rem;
  min-width: 60%;
  min-height: 80%;
}

.offCanvasInfoCard {
  margin-bottom: 1rem;
  background-color: rgba(0, 0, 0, 0.5);
} */


/* ////////////////////////////// navbar ////////////////////////////// */
/* .navBarToggler {
  font-size: 0.5rem;
} */

/* .navBarItem {
  font-weight: bold;
  color: rgba(0, 0, 0, 0.863) !important;
}

.navBarItem:hover {
  color: white !important;
}

nav, ul {
  float: right;
} */

/* .navbarList {
  flex-grow: 0 !important
} */


/* ////////////////////////////// portfolio ////////////////////////////// */
/* .portfolioHeader {
  
  font-family: Arial, Helvetica, sans-serif;
}

.offCanvasPortfolioInfoCard {
  background-color: rgba(0, 0, 0, 0.5);
}

.bulletPoint li::before {
  content: "\2022";
  color: red;
  font-weight: bold;
  margin-left: 1rem;
  width: 1em;
  display: inline-block;
}




footer {
  background-color: rgba(0, 0, 0, 1);
  font-family: Georgia, "Times New Roman", Times, serif;
  color: #ced4dac9
} */


/* ///////////////////////////////////////////////////////////////////////////////////////// */
/* //////////////////////////////////////////////////////////////////////////////////////// */
/* ////////////////////////////// **   MEDIA QUERIES  **  //////////////////////////////// */
/* ////////////////////////////////////////////////////////////////////////////////////// */
/* ///////////////////////////////////////////////////////////////////////////////////// */




/**************************/
/* BELOW 1370px (Smaller desktops/small laptop) */
/**************************/

/* @media (max-width: 86em) {
    .aboutAndContact {
      position: fixed;
      top:15rem;
      left:8.5rem;
      min-width: 70%;
      min-height: 80%;
    }

    .headerContainer {
      margin-top: 7rem !important;
      margin-right: 7rem !important;  
    }
    
    .headerH1 {
      /* font-family:cursive !important; */
      /* margin-right: 10rem; */
      /* font-size: 3rem; */
    /* } */
    
    /* .headerH2 {
      /* font-family:cursive !important; */
      /* font-style: italic; */
      /* font-size: 3rem; */
      /* margin-top: 5rem !important; */
    /* } */
     /* */ 
    /* .headerButtons {
      margin-right: 0rem !important;
      margin-top: 3.5rem !important;
    } */

/* }  */

/**************************/
/* BELOW 1200px (Landscape Tablets) */
/**************************/

@media (max-width: 75em) {
  
}

/**************************/
/* BELOW 944px (Tablets) */
/**************************/

@media (max-width: 59em) {
  
}

/**************************/
/* BELOW 704px (Smaller tablets) */
/**************************/

@media (max-width: 44em) {
  
}

/**************************/
/* BELOW 544px (Phones) */
/**************************/

@media (max-width: 34em) {
  
}

/**************************/
/* ????????????????????????????????????????????????????????????????????? 
/**************************/

/* @media only screen and (max-width: 600px) {
  .cssSmallScreens {
    font-weight: bold;
  }
  .cssSmallScreensSmallerFont {
    font-size: 1.25rem;
  }
  .removeOnSmallScreens {
    display: none;
  }
  .showOnSmallScreen {
    display: list-item;
  } */
  /* .marginSmallScreen {
    margin-top: 6rem;
  }
  .marginSmallScreen2 {
    margin-top: 2rem;
  }
  .marginSmallScreen3 {
    margin-top: 9rem;
  } */

  /* .sizeSmallScreen {
    font-size: 0.85rem;
  }
  .portfolio {
    width: 100vw;
    height: 95vh;
  }
  .offCanvasInfoCard {
    margin-bottom: 1rem;
    background-color: rgba(0, 0, 0, 0.5);
  }
  .offCanvasPortfolioInfoCard {
    margin-top: 2rem;
    background-color: rgba(0, 0, 0, 0.5);
  }
  .offcanvas-header {
    padding-bottom: 0;
  }

  .aboutAndContact {
    width: 100vw;
    height: 70vh;
  }
  .footerH2 {
    font-size: 1.1rem !important;
    font-family: Georgia, "Times New Roman", Times, serif;
    padding-top: 2%;
    padding-bottom: 2%;
    margin-bottom: -4px;
    color: #868e96;
  }
  .footerIcons {
    padding-left: 30%;
    padding-top: 0;
  }
  .footerIcon {
    padding-left: 7px;
    padding-right: 7px;
    padding-top: 0;
  } */
  /* .backgroundPic {
    height: "75vh";
  } */

  /* .bodyCss {
    background-image: url("../src/Background2.jpg");
    background-repeat: no-repeat; */
    /* background-size: 100vw;
    background-size: 88vh;
    background-position-x: 50%; */
  /* } */

  /* .emailField {
    margin-top: 5%;
  }
} */

